--- a/toxic_comment_detection and classifier.ipynb
+++ b/toxic_comment_detection and classifier.ipynb
@@ -5,17 +5,35 @@
    "id": "3f69ce32",
    "metadata": {},
    "source": [
-    "## CSCK507 Mid-Module Assignment\n",
+    "# CSCK507 Mid-Module Assignment\n",
     "\n",
-    "#### Table of Contents:\n",
-    "- [Data Preprocessing](#data-preprocessing)\n",
-    "\n",
-    "#### Introduction and Where to download CSV:"
+    "## Table of Contents\n",
+    "- [Introduction](#introduction)\n",
+    "- [Import Dependencies](#import-dependencies)\n",
+    "- [2.1 Data Preprocessing](#data-preprocessing)\n",
+    "  - [Data Exploration & Analysis](#data-exploration-&-analysis)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bf31f83d",
+   "metadata": {},
+   "source": [
+    "## Introduction "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c340f700",
+   "metadata": {},
+   "source": [
+    "### Importing Dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "4d3aae96",
    "metadata": {},
    "outputs": [],
@@ -23,8 +41,6 @@
     "# For Data Analysis\n",
     "import pandas as pd \n",
     "import numpy as np\n",
-    "from collections import Counter\n",
-    "\n",
     "\n",
     "# For Data Preprocessing\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
@@ -50,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "cdd219e6",
    "metadata": {},
    "outputs": [],
@@ -64,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "5510ef2e",
    "metadata": {},
    "outputs": [],
@@ -79,6 +95,27 @@
     "    nltk_stop = stopwords.words('english')\n",
     "except LookupError:\n",
     "    nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "69032291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialise SpaCy Model \n",
+    "spacy.prefer_gpu()\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "nlp.Defaults.stop_words.update(nltk_stop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca10556d",
+   "metadata": {},
+   "source": [
+    "This line updates the default set of stop words used by the SpaCy model with the English stopwords from NLTK that were loaded earlier. Stop words are common words like \"the,\" \"and,\" \"is,\" etc., which are typically excluded from text analysis because they carry little semantic value. This step enriches the SpaCy model with the NLTK stopwords."
    ]
   },
   {
@@ -97,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "1957dae5",
    "metadata": {},
    "outputs": [
@@ -149,10 +186,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "75bce654",
+   "execution_count": 25,
+   "id": "e3e85c0f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 159571 entries, 0 to 159570\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column         Non-Null Count   Dtype \n",
+      "---  ------         --------------   ----- \n",
+      " 0   id             159571 non-null  object\n",
+      " 1   comment_text   159571 non-null  object\n",
+      " 2   toxic          159571 non-null  int64 \n",
+      " 3   severe_toxic   159571 non-null  int64 \n",
+      " 4   obscene        159571 non-null  int64 \n",
+      " 5   threat         159571 non-null  int64 \n",
+      " 6   insult         159571 non-null  int64 \n",
+      " 7   identity_hate  159571 non-null  int64 \n",
+      "dtypes: int64(6), object(2)\n",
+      "memory usage: 9.7+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3a1fc8b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26fa0b34",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d5d19139",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toxic\n",
+      "0    144277\n",
+      "1    144277\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "severe_toxic\n",
+      "0    157976\n",
+      "1    157976\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "obscene\n",
+      "0    151122\n",
+      "1    151122\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "threat\n",
+      "0    159093\n",
+      "1    159093\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "insult\n",
+      "0    151694\n",
+      "1    151694\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "identity_hate\n",
+      "0    158166\n",
+      "1    158166\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -278,42 +398,6 @@
       "/Users/andyho/anaconda3/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "toxic\n",
-      "0    144277\n",
-      "1    144277\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "severe_toxic\n",
-      "0    157976\n",
-      "1    157976\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "obscene\n",
-      "0    151122\n",
-      "1    151122\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "threat\n",
-      "0    159093\n",
-      "1    159093\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "insult\n",
-      "0    151694\n",
-      "1    151694\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "identity_hate\n",
-      "0    158166\n",
-      "1    158166\n",
-      "Name: count, dtype: int64\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -337,36 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e3e85c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialise SpaCy Model \n",
-    "spacy.prefer_gpu()\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "nlp.Defaults.stop_words.update(nltk_stop)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e3a1fc8b",
-   "metadata": {},
-   "source": [
-    "This line updates the default set of stop words used by the SpaCy model with the English stopwords from NLTK that were loaded earlier. Stop words are common words like \"the,\" \"and,\" \"is,\" etc., which are typically excluded from text analysis because they carry little semantic value. This step enriches the SpaCy model with the NLTK stopwords."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26fa0b34",
-   "metadata": {},
-   "source": [
-    "### Data Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "53bf8b29",
    "metadata": {},
    "outputs": [
@@ -399,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "7feae058",
    "metadata": {},
    "outputs": [
@@ -432,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "b50e5572",
    "metadata": {},
    "outputs": [],
@@ -463,9 +518,19 @@
     "    text = re.sub(r\"[^a-zA-Z0-9]+\", \" \", text)\n",
     "    # Lowercase the text\n",
     "    text = text.lower()\n",
+    "    \n",
+    "    # Create a TF-IDF (similar to bag of words but it provides importance based on word)\n",
     "\n",
-    "    return text\n",
-    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9cb584be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def tokenize_text(documents):\n",
     "    \"\"\"\n",
     "    Take a list of documents as input and performs the following:\n",
@@ -493,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "4e1c7971",
    "metadata": {},
    "outputs": [
@@ -669,7 +734,7 @@
        "9             0        0       0       0              0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,14 +744,6 @@
     "df['comment_text'] = df['comment_text'].apply(preprocess_text)\n",
     "df.head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a96c974",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
