--- a/toxic_comment_detection and classifier.ipynb
+++ b/toxic_comment_detection and classifier.ipynb
@@ -20,7 +20,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "4bda89fa",
+   "id": "d8a93faa",
    "metadata": {},
    "source": [
     "## 1. Introduction "
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c924ace5",
+   "id": "2c6f084e",
    "metadata": {},
    "source": [
     "### Importing Dependencies"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "id": "4d3aae96",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "id": "cdd219e6",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "id": "5510ef2e",
    "metadata": {},
    "outputs": [],
@@ -103,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "350551a8",
+   "execution_count": 76,
+   "id": "0828da09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b63f741",
+   "id": "2b1f0c89",
    "metadata": {},
    "source": [
     "## 2. Data Exploration & Analysis"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "773973c2",
+   "id": "6b025224",
    "metadata": {},
    "source": [
     "Some chapter notes"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "id": "1957dae5",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "id": "e3e85c0f",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "id": "53bf8b29",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "id": "7feae058",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53848658",
+   "id": "d5dfe527",
    "metadata": {},
    "source": [
     "### 2.1 Data Preprocessing\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "id": "b50e5572",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50b9a4af",
+   "id": "db431fb0",
    "metadata": {},
    "source": [
     "### Tokenisation and Lemmatisation\n",
@@ -351,8 +351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "48802d2e",
+   "execution_count": 82,
+   "id": "94e787b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
     "    2. Reduce words to their base or root form using lemmatization.\n",
     "    3. Remove stop words and non-alphabetic characters.\n",
     "\n",
-    "    Utilizes spaCy's nlp.pipe for efficient batch processing.\n",
+    "    Utilises spaCy's nlp.pipe for efficient batch processing.\n",
     "\n",
     "    :param documents: List of strings representing documents.\n",
     "    :return: List of lists of strings, where each list corresponds to the lemmatized tokens of a document.\n",
@@ -371,10 +371,10 @@
     "    lemmatized_tokens_list = []\n",
     "    \n",
     "    # Process documents using spaCy's nlp.pipe with \"ner\" and \"parser\" components disabled\n",
-    "    for doc in nlp.pipe(documents, disable=[\"ner\", \"parser\"], batch_size=1000):\n",
+    "    for doc in nlp.pipe(documents, disable=[\"ner\", \"parser\"], batch_size=5000):\n",
     "        # Generate lemmatised tokens, remove stop words, and non-alphabetic characters\n",
-    "        lemmatised_tokens = [token.lemma_ for token in doc if token.is_alpha and token.lemma_ not in nlp.Defaults.stop_words]\n",
-    "        lemmatised_tokens_list.append(lemmatised_tokens)\n",
+    "        lemmatized_tokens = [token.lemma_ for token in doc if token.is_alpha and token.lemma_ not in nlp.Defaults.stop_words]\n",
+    "        lemmatized_tokens_list.append(lemmatized_tokens)\n",
     "\n",
     "    return lemmatized_tokens_list\n",
     "\n"
@@ -382,17 +382,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc2fd942",
+   "id": "013e9850",
    "metadata": {},
    "source": [
     "In many tokenization tasks, especially when you're primarily interested in lemmatization and removing stop words, you may not need the additional information provided by the \"ner\" and \"parser\" components.\n",
     "\n",
-    "Disabling the \"ner\" and \"parser\" components during the processing of documents with nlp.pipe can significantly improve efficiency and speed, especially when dealing with a large amount of text data"
+    "Disabling the \"ner\" and \"parser\" components during the processing of documents with nlp.pipe will reduce computational laod and can significantly improve efficiency and speed, especially when dealing with a large amount of text data.\n",
+    "\n",
+    "It's a trade-off between computational resources and the specific linguistic information your task requires. If named entities and syntactic parsing are not critical for your task, disabling these components is a pragmatic approach to enhance processing speed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "id": "4e1c7971",
    "metadata": {},
    "outputs": [
@@ -568,7 +570,7 @@
        "9             0        0       0       0              0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "60920d65",
+   "execution_count": 84,
+   "id": "66910d11",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +759,7 @@
        "9             0        0       0       0              0  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +772,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4209044",
+   "id": "a603dad8",
+   "metadata": {},
+   "source": [
+    "## Feature Extraction\n",
+    "    \n",
+    "### Create a TF-IDF \n",
+    "vectoriser = TfTfidfVectorizer()\n",
+    "transformed_output = v.fit_transform(\n",
+    "print(v.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82e4eb53",
    "metadata": {},
    "source": [
     "### 2.2 Requirements\n",
@@ -783,17 +798,78 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a0ab934e",
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "80d7af77",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'class_label'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3790\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3789\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3790\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3791\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'class_label'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[85], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Assuming you have a DataFrame 'df' with a column 'comment_text' and a column 'class_label'\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m class_labels \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclass_label\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Create a dictionary to store counts\u001b[39;00m\n\u001b[1;32m      5\u001b[0m class_counts \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclass_label\u001b[39m\u001b[38;5;124m'\u001b[39m: [], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_sentences\u001b[39m\u001b[38;5;124m'\u001b[39m: [], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_tokens\u001b[39m\u001b[38;5;124m'\u001b[39m: []}\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3896\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3895\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3896\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   3897\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3898\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3797\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3792\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3793\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3794\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3795\u001b[0m     ):\n\u001b[1;32m   3796\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3797\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3798\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3799\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3800\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3801\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'class_label'"
+     ]
+    }
+   ],
    "source": [
-    "## Feature Extraction\n",
-    "    \n",
-    "### Create a TF-IDF \n",
-    "vectoriser = TfTfidfVectorizer()\n",
-    "transformed_output = v.fit_transform(\n",
-    "print(v.vocabulary_)"
+    "# Count number of stences and tokens per class using SpaCy.\n",
+    "# Assuming you have a DataFrame 'df' with a column 'comment_text' and a column 'class_label'\n",
+    "class_labels = df['class_label'].unique()\n",
+    "\n",
+    "# Create a dictionary to store counts\n",
+    "class_counts = {'class_label': [], 'num_sentences': [], 'num_tokens': []}\n",
+    "\n",
+    "# Iterate through each class\n",
+    "for class_label in class_labels:\n",
+    "    # Select comments for the current class\n",
+    "    class_comments = df[df['class_label'] == class_label]['comment_text'].tolist()\n",
+    "\n",
+    "    # Initialize counters\n",
+    "    total_sentences = 0\n",
+    "    total_tokens = 0\n",
+    "\n",
+    "    # Iterate through comments in the current class\n",
+    "    for comment in class_comments:\n",
+    "        # Process the comment with spaCy\n",
+    "        doc = nlp(comment)\n",
+    "\n",
+    "        # Count sentences and tokens\n",
+    "        total_sentences += len(list(doc.sents))\n",
+    "        total_tokens += len(doc)\n",
+    "\n",
+    "    # Update the counts in the dictionary\n",
+    "    class_counts['class_label'].append(class_label)\n",
+    "    class_counts['num_sentences'].append(total_sentences)\n",
+    "    class_counts['num_tokens'].append(total_tokens)\n",
+    "\n",
+    "# Create a DataFrame from the dictionary\n",
+    "class_counts_df = pd.DataFrame(class_counts)\n",
+    "\n",
+    "# Display the result\n",
+    "print(class_counts_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "174f17cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
