--- a/hate_comment_classifier.ipynb
+++ b/hate_comment_classifier.ipynb
@@ -17,7 +17,7 @@
     "  - [Data Preprocessing](#data-preprocessing)\n",
     "  - [Tokenisation & Lemmatisation](#data-preprocessing)\n",
     "  \n",
-    "    [Section 2.1 Requirements](#data-exploration-&-analysis)\n",
+    "    [2.1 Requirements](#data-exploration-&-analysis)\n",
     "      - [Number of Sentences & Tokens Per Class](#data-preprocessing)\n",
     "      - [Understanding the Most Common Words](#data-preprocessing)\n",
     "      - [Data Imbalance](#data-imbalance)\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa18dfb1",
+   "id": "79295022",
    "metadata": {},
    "source": [
     "### Loading Kaggle dataset into DataFrame"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01611cd5",
+   "id": "0504d25b",
    "metadata": {},
    "source": [
     "### Initialise SpaCy Model "
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "defc46fb",
+   "id": "6f31a62b",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14678fd8",
+   "id": "6e492d24",
    "metadata": {},
    "source": [
     "### Aligning Dataset"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76673590",
+   "id": "fcd3376f",
    "metadata": {},
    "source": [
     "This part consists of general cleaning\n",
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21d32b4d",
+   "id": "ef44c1ba",
    "metadata": {},
    "source": [
     "### Count number of sentences and tokens per class using SpaCy."
