--- a/hate_comment_classifier.ipynb
+++ b/hate_comment_classifier.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "id": "4d3aae96",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79295022",
+   "id": "fb8bbe01",
    "metadata": {},
    "source": [
     "### Loading Kaggle dataset into DataFrame"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 2,
    "id": "cdd219e6",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0504d25b",
+   "id": "364504dd",
    "metadata": {},
    "source": [
     "### Initialise SpaCy Model "
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "id": "5510ef2e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "id": "9716bf1d",
    "metadata": {},
    "outputs": [],
@@ -150,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "id": "6f31a62b",
+   "execution_count": 5,
+   "id": "a5448474",
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +241,61 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>00025465d4725e87</td>\n",
+       "      <td>\"\\n\\nCongratulations from me as well, use the ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0002bcb3da6cb337</td>\n",
+       "      <td>COCKSUCKER BEFORE YOU PISS AROUND ON MY WORK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>00031b1e95af7921</td>\n",
+       "      <td>Your vandalism to the Matt Shirvington article...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>00037261f536c51d</td>\n",
+       "      <td>Sorry if the word 'nonsense' was offensive to ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>00040093b2687caa</td>\n",
+       "      <td>alignment on this subject and which are contra...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -252,27 +307,37 @@
        "2  000113f07ec002fd  Hey man, I'm really not trying to edit war. It...      0   \n",
        "3  0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...      0   \n",
        "4  0001d958c54c6e35  You, sir, are my hero. Any chance you remember...      0   \n",
+       "5  00025465d4725e87  \"\\n\\nCongratulations from me as well, use the ...      0   \n",
+       "6  0002bcb3da6cb337       COCKSUCKER BEFORE YOU PISS AROUND ON MY WORK      1   \n",
+       "7  00031b1e95af7921  Your vandalism to the Matt Shirvington article...      0   \n",
+       "8  00037261f536c51d  Sorry if the word 'nonsense' was offensive to ...      0   \n",
+       "9  00040093b2687caa  alignment on this subject and which are contra...      0   \n",
        "\n",
        "   severe_toxic  obscene  threat  insult  identity_hate  \n",
        "0             0        0       0       0              0  \n",
        "1             0        0       0       0              0  \n",
        "2             0        0       0       0              0  \n",
        "3             0        0       0       0              0  \n",
-       "4             0        0       0       0              0  "
+       "4             0        0       0       0              0  \n",
+       "5             0        0       0       0              0  \n",
+       "6             1        1       0       1              0  \n",
+       "7             0        0       0       0              0  \n",
+       "8             0        0       0       0              0  \n",
+       "9             0        0       0       0              0  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "id": "e3e85c0f",
    "metadata": {},
    "outputs": [
@@ -306,15 +371,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e492d24",
+   "id": "0072d162",
    "metadata": {},
    "source": [
-    "### Aligning Dataset"
+    "### Aligning Train and Test Datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 7,
    "id": "53bf8b29",
    "metadata": {},
    "outputs": [
@@ -322,8 +387,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df_test before removing -1: (153164, 8)\n",
-      "df_test after removing -1: (63978, 7)\n"
+      "df_test before removing -1: (153164, 7)\n",
+      "df_test after removing -1: (153164, 7)\n"
      ]
     }
    ],
@@ -333,15 +398,15 @@
     "class_labels\n",
     "\n",
     "# Remove rows with -1 from df_test as they are not used for scoring\n",
-    "print(f'df_test before removing -1: {df_test.shape}')\n",
+    "print(f'df_test before removing -1: {df_test_labels.shape}')\n",
     "for class_label in class_labels:\n",
     "    df_test = df_test_labels[df_test_labels[class_label] != -1]\n",
-    "print(f'df_test after removing -1: {df_test.shape}')\n",
+    "print(f'df_test after removing -1: {df_test_labels.shape}')\n",
     "\n",
     "# Left join 'df_test' and 'df_test_comment' on the 'id' column\n",
     "df_test = pd.merge(df_test_labels, df_test_comment, on='id', how='left')\n",
     "\n",
-    "# Rearrange columns to match the structure of 'df'\n",
+    "# Rearrange and align columns to match the structure of 'df'\n",
     "df_test = df_test[['id', 'comment_text', 'toxic', 'severe_toxic', 'obscene', 'threat', 'insult', 'identity_hate']]"
    ]
   },
@@ -350,12 +415,12 @@
    "id": "35d2825a",
    "metadata": {},
    "source": [
-    "### 2.1 Data Preprocessing"
+    "### Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 8,
    "id": "b50e5572",
    "metadata": {},
    "outputs": [],
@@ -404,11 +469,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd3376f",
+   "id": "a8512f77",
    "metadata": {},
    "source": [
-    "This part consists of general cleaning\n",
-    "regex for extra characters, stop words, lowercasing, etc."
+    "The 'preprocess_text' function uses RegEx (Regular Expression) to cleanse and standardize textual data for enhanced manageability."
    ]
   },
   {
@@ -421,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 9,
    "id": "e9bb6e73",
    "metadata": {},
    "outputs": [],
@@ -463,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 10,
    "id": "4e1c7971",
    "metadata": {},
    "outputs": [
@@ -639,7 +703,7 @@
        "9             0        0       0       0              0  "
       ]
      },
-     "execution_count": 237,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 11,
    "id": "5deb9a80",
    "metadata": {},
    "outputs": [
@@ -828,7 +892,7 @@
        "9            -1       -1      -1      -1             -1  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef44c1ba",
+   "id": "d5179685",
    "metadata": {},
    "source": [
     "### Count number of sentences and tokens per class using SpaCy."
@@ -966,6 +1030,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f6b84d45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2de54ff",
    "metadata": {},
    "outputs": [],
    "source": []
