--- a/hate_comment_classifier.ipynb
+++ b/hate_comment_classifier.ipynb
@@ -472,7 +472,7 @@
    "id": "a8512f77",
    "metadata": {},
    "source": [
-    "The 'preprocess_text' function uses RegEx (Regular Expression) to cleanse and standardize textual data for enhanced manageability."
+    "The 'preprocess_text' function uses RegEx (Regular Expression) to cleanse and standardize textual data for enhanced manageability. The reason, being: "
    ]
   },
   {
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2de54ff",
+   "id": "825635c7",
    "metadata": {},
    "outputs": [],
    "source": []
