--- a/hate_comment_classifier.ipynb
+++ b/hate_comment_classifier.ipynb
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "81cca524",
+   "id": "9494929b",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2813daa6",
+   "id": "f631ecfd",
    "metadata": {},
    "source": [
     "### Task 1 Summary"
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1831b561",
+   "id": "0f7205c6",
    "metadata": {},
    "source": [
     "### TF-IDF Implementation\n",
@@ -1450,6 +1450,87 @@
    "outputs": [],
    "source": [
     "X.shape, y.shape, X_test.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "167366b3",
+   "metadata": {},
+   "source": [
+    "## Section 4. Machine Learning Model Development"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2158c961",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_clf(clf, X_test, y_test, class_labels, name):\n",
+    "    \"\"\"\n",
+    "    Evaluate classifier performance\n",
+    "\n",
+    "    :param clf: classifier\n",
+    "    :param X_test: array\n",
+    "    :param y_test: array\n",
+    "    :param class_labels: list of strings\n",
+    "    :param name: string\n",
+    "    :return: dictionary, array, array\n",
+    "    \"\"\"\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "    # calculate performance metrics\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred, average='macro')\n",
+    "    recall = recall_score(y_test, y_pred, average='macro')\n",
+    "    f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "    auc_roc = roc_auc_score(np.array(y_test), y_pred, average='macro')\n",
+    "\n",
+    "    # output performance report\n",
+    "    out_dict = {'model': name, 'accuracy': accuracy, 'precision': precision,\n",
+    "                'recall': recall, 'f1': f1, 'auc_roc': auc_roc}\n",
+    "\n",
+    "    # output confusion matrix\n",
+    "    conf_matrix = multilabel_confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "    class_report = classification_report(y_test, y_pred,\n",
+    "                                         target_names=class_labels, zero_division=1)\n",
+    "\n",
+    "    return out_dict, class_report, conf_matrix\n",
+    "\n",
+    "\n",
+    "def plot_multilabel_confusion_matrix(conf_matrix, class_labels, model_name):\n",
+    "    \"\"\"\n",
+    "    Plot multilabel confusion matrix\n",
+    "    \n",
+    "    :param conf_matrix: array\n",
+    "    :param class_labels: list of strings\n",
+    "    :param model_name: string\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    fig, axs = plt.subplots(nrows=2, ncols=3, figsize=(15, 10))\n",
+    "\n",
+    "    for cm, label, ax in zip(conf_matrix, class_labels, axs.flatten()):\n",
+    "        sns.heatmap(cm, annot=True, fmt='d', cmap=None, ax=ax)\n",
+    "        ax.set_xlabel('Predicted')\n",
+    "        ax.set_ylabel('Actual')\n",
+    "        ax.set_title(label)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.suptitle(f'Multilabel Confusion Matrix ({model_name})', y=1.02)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82dc43c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression()\n",
+    "rf = RandomForestClassifier()\n",
+    "xgb = XGBClassifier()"
    ]
   }
  ],
