--- a/hate_comment_classifier.ipynb
+++ b/hate_comment_classifier.ipynb
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9494929b",
+   "id": "84dfbfe8",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f631ecfd",
+   "id": "91568fc3",
    "metadata": {},
    "source": [
     "### Task 1 Summary"
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f7205c6",
+   "id": "dc082f42",
    "metadata": {},
    "source": [
     "### TF-IDF Implementation\n",
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "167366b3",
+   "id": "990b694a",
    "metadata": {},
    "source": [
     "## Section 4. Machine Learning Model Development"
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2158c961",
+   "id": "f27e89c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,13 +1524,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a82dc43c",
+   "id": "56965f5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "lr = LogisticRegression()\n",
     "rf = RandomForestClassifier()\n",
     "xgb = XGBClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a40b529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "accuracy = []\n",
+    "skf = StratifiedKFold(n_splits=10)\n",
+    "skf.get_n_splits(X, y)\n",
+    "for clf in (lr,rf,xgb):\n",
+    "\n",
+    "    StratifiedKFold(n_splits=10, random_state=None, shuffle=False)\n",
+    "    for train_index, test_index in skf.split(X, y):\n",
+    "            \n",
+    "            X1_train, X1_test = X[train_index], X[test_index]\n",
+    "            y1_train, y1_test = y[train_index], y[test_index]\n",
+    "\n",
+    "            model = clf.fit(X1_train,y1_train)\n",
+    "            y_preds = model.predict(X1_test)\n",
+    "            acc = (sklearn.metrics.f1_score(y1_test,y_preds,average = 'micro'))\n",
+    "            accuracy.append(acc)\n",
+    "    print(clf.__class__.__name__,np.array(accuracy).mean())"
    ]
   }
  ],
