--- a/hate_comment_classifier.ipynb
+++ b/hate_comment_classifier.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "4d3aae96",
    "metadata": {},
    "outputs": [],
@@ -86,14 +86,16 @@
     "from sklearn.base import TransformerMixin\n",
     "\n",
     "# Machine Learning\n",
+    "# import eli5\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn import metrics \n",
-    "# import eli5\n",
+    "from sklearn.metrics import (accuracy_score, classification_report, f1_score,\n",
+    "                             multilabel_confusion_matrix, precision_score,\n",
+    "                             recall_score, roc_auc_score)\n",
     "\n",
     "# Visualisation\n",
     "import matplotlib.pyplot as plt\n",
@@ -387,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9a9dde48",
+   "id": "4fcd39a6",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7046e6e",
+   "id": "347f7e8f",
    "metadata": {},
    "source": [
     "As shown above, this task necessitates a multi-label classification approach for a more accurate understanding and identification of hate comments as they typically exhibit a nuanced interplay of multiple labels. "
@@ -421,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "8a106576",
+   "id": "8bc293bc",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "49ac0447",
+   "id": "bfdfcf6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c151af2",
+   "id": "e631efbd",
    "metadata": {},
    "source": [
     "### Tokenisation and Lemmatisation"
@@ -640,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5e6f312c",
+   "id": "d91026ca",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fb2bbce7",
+   "id": "53feaff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,6 +1566,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "747953fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TF-IDF Information:\n",
+      "Training TF-IDF Features Shape: (159571, 75000)\n",
+      "Training Labels Shape: (159571, 6)\n",
+      "Testing TF-IDF Features Shape: (63978, 75000)\n",
+      "Testing Labels Shape: (63978, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"TF-IDF Information:\")\n",
+    "print(f\"Training TF-IDF Features Shape: {X_train_tfidf.shape}\")\n",
+    "print(f\"Training Labels Shape: {y_train.shape}\")\n",
+    "print(f\"Testing TF-IDF Features Shape: {X_test_tfidf.shape}\")\n",
+    "print(f\"Testing Labels Shape: {y_test.shape}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "96047ee6",
    "metadata": {},
@@ -1576,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7823cd1e",
+   "id": "21a17326",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,10 +1662,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "a5739a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word2Vec Information:\n",
+      "Training Word2Vec Features Length: 159571\n",
+      "Training Labels (Word2Vec) Shape: (159571, 6)\n",
+      "Testing Word2Vec Features Length: 63978\n",
+      "Testing Labels (Word2Vec) Shape: (63978, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Word2Vec Information:\")\n",
+    "print(f\"Training Word2Vec Features Length: {len(X_train_word2vec)}\")\n",
+    "print(f\"Training Labels (Word2Vec) Shape: {y_train_word2vec.shape}\")\n",
+    "print(f\"Testing Word2Vec Features Length: {len(X_test_word2vec)}\")\n",
+    "print(f\"Testing Labels (Word2Vec) Shape: {y_test_word2vec.shape}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "7dcd04de",
+   "id": "23587725",
    "metadata": {},
    "source": [
+    "\n",
     "Saving the TF-IDF and Word2Vec models are common practice in ML workflow, allowing for:\n",
     "\n",
     "Reusability: Saved models can be easily reused in other projects or shared with collaborators, saving time and resources.\n",
@@ -1648,48 +1703,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "a5739a46",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TF-IDF Information:\n",
-      "Training TF-IDF Features Shape: (159571, 75000)\n",
-      "Training Labels Shape: (159571, 6)\n",
-      "Testing TF-IDF Features Shape: (63978, 75000)\n",
-      "Testing Labels Shape: (63978, 6)\n",
-      "\n",
-      "Word2Vec Information:\n",
-      "Training Word2Vec Features Length: 159571\n",
-      "Training Labels (Word2Vec) Shape: (159571, 6)\n",
-      "Testing Word2Vec Features Length: 63978\n",
-      "Testing Labels (Word2Vec) Shape: (63978, 6)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"TF-IDF Information:\")\n",
-    "print(f\"Training TF-IDF Features Shape: {X_train_tfidf.shape}\")\n",
-    "print(f\"Training Labels Shape: {y_train.shape}\")\n",
-    "print(f\"Testing TF-IDF Features Shape: {X_test_tfidf.shape}\")\n",
-    "print(f\"Testing Labels Shape: {y_test.shape}\")\n",
-    "\n",
-    "print(\"\\nWord2Vec Information:\")\n",
-    "print(f\"Training Word2Vec Features Length: {len(X_train_word2vec)}\")\n",
-    "print(f\"Training Labels (Word2Vec) Shape: {y_train_word2vec.shape}\")\n",
-    "print(f\"Testing Word2Vec Features Length: {len(X_test_word2vec)}\")\n",
-    "print(f\"Testing Labels (Word2Vec) Shape: {y_test_word2vec.shape}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "2ab1ba3b",
+   "id": "216afdab",
    "metadata": {},
    "source": [
+    "### TF-IDF vs Word2Vec\n",
+    "\n",
     "Both TF-IDF and Word2Vec are powerful tools used in language processing. TF-IDF is straightforward, giving importance to words based on how often they appear in a document compared to a larger collection of documents. It works well when there's not a lot of data but doesn't grasp the meaning of words and represents documents in a fixed way.\n",
     "\n",
     "On the flip side, Word2Vec is better at understanding the meaning of words and their relationships. It considers the context in which words appear and can measure how similar words are. However, it needs a good amount of data to work effectively.\n",
@@ -1736,7 +1755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329e47c0",
+   "id": "94e43b8b",
    "metadata": {},
    "source": [
     "### Multilabel Classification Evaluation and Visualisation"
@@ -1744,22 +1763,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "87dbceef",
+   "execution_count": 120,
+   "id": "6b4d458d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_and_visualize_classifier(clf, X_test, y_test, class_labels, name):\n",
-    "    \"\"\"\n",
-    "    Evaluate classifier performance and visualize multilabel confusion matrix\n",
-    "\n",
-    "    :param clf: classifier\n",
-    "    :param X_test: array\n",
-    "    :param y_test: array\n",
-    "    :param class_labels: list of strings\n",
-    "    :param name: string\n",
-    "    :return: dictionary, array, array\n",
-    "    \"\"\"\n",
     "    y_pred = clf.predict(X_test)\n",
     "    \n",
     "    # Calculate performance metrics\n",
@@ -1784,16 +1793,7 @@
     "\n",
     "    return out_dict, class_report, conf_matrix\n",
     "\n",
-    "\n",
     "def plot_multilabel_confusion_matrix(conf_matrix, class_labels, model_name):\n",
-    "    \"\"\"\n",
-    "    Plot multilabel confusion matrix\n",
-    "    \n",
-    "    :param conf_matrix: array\n",
-    "    :param class_labels: list of strings\n",
-    "    :param model_name: string\n",
-    "    :return: None\n",
-    "    \"\"\"\n",
     "    fig, axs = plt.subplots(nrows=2, ncols=3, figsize=(15, 10))\n",
     "\n",
     "    for cm, label, ax in zip(conf_matrix, class_labels, axs.flatten()):\n",
@@ -1808,8 +1808,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058d1ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize classifiers\n",
+    "logistic_regression = LogisticRegression(class_weight='balanced', max_iter=1000, random_state=0)\n",
+    "svm = LinearSVC(class_weight='balanced', max_iter=1000, random_state=0)\n",
+    "multinomial_nb = MultinomialNB()\n",
+    "mlp_classifier = MLPClassifier(max_iter=1000, random_state=0, hidden_layer_sizes=(100))\n",
+    "\n",
+    "classifiers = {\n",
+    "    'LogisticRegression': logistic_regression,\n",
+    "    'SVM': svm,\n",
+    "    'MultinomialNB': multinomial_nb,\n",
+    "    'MLPClassifier': mlp_classifier\n",
+    "}\n",
+    "\n",
+    "# Initialize StratifiedKFold\n",
+    "num_splits = 5\n",
+    "skf = StratifiedKFold(n_splits=num_splits, shuffle=True, random_state=0)\n",
+    "\n",
+    "metrics = []\n",
+    "class_reports = {}\n",
+    "conf_matrices = {}\n",
+    "\n",
+    "for key, classifier in classifiers.items():\n",
+    "    classifiers[key] = OneVsRestClassifier(classifier, n_jobs=-1).fit(X_train_tfidf, y_train_tfidf)\n",
+    "    out_dict, class_report, conf_matrix = evaluate_and_visualize_classifier(classifiers[key], X_test_tfidf, y_test_tfidf, class_labels, key)\n",
+    "    metrics.append(out_dict)\n",
+    "    class_reports[key] = class_report\n",
+    "    conf_matrices[key] = conf_matrix\n",
+    "    \n",
+    "warnings.filterwarnings(action='ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a7acf10d",
+   "id": "97c9c3c2",
    "metadata": {},
    "source": [
     "StratifiedKFold ensures that each fold maintains the same class distribution as the entire dataset. This is crucial when dealing with imbalanced datasets, where some classes may have significantly fewer samples than others. Stratified sampling helps prevent situations where one fold might end up having very few instances of a certain class, leading to biased results"
